# esnacc-ng

./: .gitignore  Makefile.am  NEWS  boot.sh  configure.ac  snacc.h  snacc.h.in
c-examples/simple/: minbuf-ex.c
c-examples/test-lib/: test-lib.c
c-lib/: automake.mk
c-lib/inc/: asn-config.h  mem.h  xml.h
c-lib/src/: exp-buf.c  xml.c
compiler/: automake.mk
compiler/back-ends/c++-gen/: gen-code.c
compiler/back-ends/c-gen/: gen-code.c  gen-dec.c  gen-enc.c  gen-print.c  rules.c  rules.h
compiler/back-ends/py-gen/: gen-any.c  gen-code.c  rules.c
compiler/core/: enc-rules.c  enc-rules.h  lib-types.h  snacc.c
cxx-lib/: automake.mk
cxx-lib/inc/: asn-incl.h  meta.h  tcl-if.h
cxx-lib/src/: asn-buf.cpp  tcl-if.cpp  tkAppInit.c
java-lib/org/esnacc/asn/: ASNAny.java  ASNTag.java  ASNType.java  ConstraintsList.java  Decoder.java  Encoder.java
java-lib/org/esnacc/utils/: Bits.java  SnaccException.java
m4/: tcl.m4
py-lib/esnacc/: asn_base.py  asn_ints.py
py-lib/esnacctests/: asn_ints_test.py
redhat/: esnacc.spec.in
